# wearable_robot_eval

./: .gitignore  .gitmodules  README.md  clean.sh  run.eval.py  run.eval.sh  run.sh  run_eval_human_45dof.py  run_eval_human_45dof.sh  run_eval_human_66dof.py  run_eval_human_66dof.sh  wde_ros_bridge.py
docker/: Dockerfile  Dockerfile.nvidia  Dockerfile.nvidia.novnc  README.md  attach.sh  bootstrap.sh  build.sh  commit.sh  dev.novnc.sh  dev.sh  dev_20231212.sh  dev_bootstrap.sh  firefox.desktop_applications  gedit.desktop  host.novnc.sh  multiple.novnc.sh  nginx.conf  novnc.sh  panel  ros_entrypoint.sh  run.new.novnc.sh  run.novnc.sh  run.sh
matlab/: README.md  ff_func_modify_2.m  jj_func.m  jj_func_modify_2.m  simulation.m  simulation_modify.m  simulation_modify_2.m  simulation_modify_2.py
tests/: run_test_human_45dof_arm_effort_control.sh  run_test_human_45dof_wearing_upper_limb.sh  (+2 more)
wearable_robot_gazebo/: CMakeLists.txt  package.xml
wearable_robot_gazebo/launch/: 1_dof_arm.launch.py  eduexo.launch.py  eduexo_only.launch.py  evaluation.launch.py  evaluation_human_45dof.launch.py  grip.launch.py  human.launch.py  human_45dof.launch.py  human_45dof_wearing_lower_limb_position_control.launch.py  human_45dof_wearing_upper_limb.launch.py  human_45dof_wearing_upper_limb_effort_control.launch.py  human_only.launch.py  human_walk.launch.py  start_world_launch.py  upper_limb.launch.py
wearable_robot_gazebo/models/wood_cube_10cm/: model.sdf
wearable_robot_gazebo/src/: wearable_robot_controller_plugin.cpp
wearable_robot_gazebo/worlds/: empty.world
(+119 files in other folders)
